# cutlass

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/: FUNDING.yml
crates/app/: Cargo.toml  build.rs
crates/app/examples/: preview_loop.rs
crates/app/src/: convert.rs  demo.rs  import.rs  lib.rs  main.rs  playhead.rs  preview.rs  preview_worker.rs  ui.rs
crates/app/tests/: preview_integration.rs
crates/app/ui/: editor.slint  preview.slint
crates/app/ui/components/: drag_ghost.slint  grid_view.slint
crates/app/ui/components/timeline/: clip.slint  playhead.slint  ruler.slint  state.slint  timeline.slint  toolbar.slint  track.slint
crates/app/ui/models/: drag_state.slint  project.slint
crates/cutlass-ai/: Cargo.toml  README.md
crates/cutlass-ai/examples/: agent_probe.rs  chat_probe.rs
crates/cutlass-ai/src/: agent.rs  config.rs  describe.rs  lib.rs  provider.rs  validate.rs  wire.rs
crates/cutlass-ai/src/providers/: mod.rs  openai_compat.rs  scripted.rs
crates/cutlass-ai/tests/: agent_eval.rs  engine_roundtrip.rs  tool_schema.rs
crates/cutlass-ai/tests/snapshots/: tools.json
crates/cutlass-app/: Cargo.toml  README.md
crates/cutlass-app/src/: main.rs
crates/cutlass-compositor/: Cargo.toml  README.md
crates/cutlass-compositor/benches/: composite.rs
crates/cutlass-compositor/shaders/: blit.wgsl  composite.wgsl  effect_blur.wgsl  effect_header.wgsl  effect_vignette.wgsl  rgba_to_yuv.wgsl  solid.wgsl  yuv_blit.wgsl
crates/cutlass-compositor/src/: compositor.rs  effects.rs  layer.rs  lib.rs  yuv.rs
crates/cutlass-compositor/tests/: composite.rs  golden_frames.rs  yuv_convert.rs
crates/cutlass-decode/: Cargo.toml
crates/cutlass-decode/benches/: cold_seek.rs
crates/cutlass-decode/src/: decoder.rs  encode.rs  error.rs  frame.rs  hwaccel.rs  index.rs  lib.rs
crates/cutlass-decoder/: Cargo.toml  README.md
crates/cutlass-decoder/src/: image.rs  lib.rs
crates/cutlass-decoder/src/audio/: ducking.rs  mod.rs  playback.rs  stretch.rs
crates/cutlass-decoder/src/video/: decoder.rs  keyframe_indexer.rs  mod.rs  strip.rs  thumbnail.rs
crates/cutlass-decoder/tests/: decode_workflow.rs
crates/cutlass-decoder/tests/common/: mod.rs
crates/cutlass-engine/: Cargo.toml  README.md
crates/cutlass-engine/benches/: export.rs  preview.rs
crates/cutlass-engine/examples/: playback_bench.rs
crates/cutlass-engine/src/: composite.rs  decoder_pool.rs  engine.rs  error.rs  export.rs  export_audio.rs  frame.rs  generator_raster.rs  import.rs  lib.rs  preview.rs  session.rs
crates/cutlass-engine/src/action/: add_clip.rs  dispatch.rs  import.rs  insert_clip.rs  insert_media.rs  legacy.rs  mod.rs  remove_clip.rs  remove_media.rs
crates/cutlass-engine/src/action/edit/: add_clip.rs  add_generated.rs  duck.rs  link_clips.rs  mod.rs  move_clip.rs  restore_clip.rs  restore_transitions.rs  ripple_delete.rs  set_audio.rs  set_effect.rs  set_generator.rs  set_param.rs  set_speed.rs  set_speed_curve.rs  set_transform.rs  set_transition.rs  split_clip.rs  trim_clip.rs
crates/cutlass-engine/src/action/project/: import.rs  mod.rs  relink.rs
crates/cutlass-engine/tests/: color_convert.rs  e2e.rs  export.rs  inverse_edits.rs  inverse_undo.rs  preview.rs  project_file.rs  relink.rs  workflow.rs
crates/cutlass-engine/tests/common/: mod.rs
crates/cutlass-engines/: Cargo.toml
crates/cutlass-engines/benches/: import_seek.rs  multi_import_seek.rs
crates/cutlass-engines/src/: command.rs  engine.rs  error.rs  lib.rs  media.rs  pool.rs  proxy.rs
crates/cutlass-engines/tests/: proxy_build.rs
crates/cutlass-media/: Cargo.toml
crates/cutlass-media/src/: decode.rs  lib.rs  probe.rs  time.rs
crates/cutlass-media/tests/: seek_precision.rs
crates/cutlass-media/tests/fixtures/: .gitignore  build.sh
crates/cutlass-models/: Cargo.toml  README.md
crates/cutlass-models/src/: clip.rs  effects.rs  error.rs  ids.rs  lib.rs  media.rs  metadata.rs  param.rs  persist.rs  project.rs  schema.rs  serde_map.rs  time.rs  timeline.rs  track.rs
crates/cutlass-models/tests/: model.rs  workflow.rs
crates/cutlass-models/tests/common/: mod.rs
crates/cutlass-probe/: Cargo.toml  README.md
crates/cutlass-probe/src/: error.rs  lib.rs  media.rs  probe.rs
crates/cutlass-probe/tests/: probe_workflow.rs
crates/cutlass-probe/tests/common/: mod.rs
crates/cutlass-ui/: Cargo.toml  README.md  build.rs
crates/cutlass-ui/src/: agent.rs  audio.rs  inspector.rs  main.rs  preview_gesture.rs  preview_select.rs  preview_view.rs  preview_worker.rs  projection.rs  recent.rs  selection.rs  snap.rs  strips.rs  thumbnails.rs  timeline.rs  transport.rs  window.rs
crates/cutlass-ui/ui/: app.slint  fullscreen-preview.slint  launch.slint  state.slint  test-app.slint
crates/cutlass-ui/ui/components/: button.slint  color-swatch.slint  dropdown.slint  index.slint  panel-header.slint  project-welcome.slint  scroll-view.slint  slider.slint
crates/cutlass-ui/ui/lib/: drag-backend.slint  export-backend.slint  index.slint  inspector-backend.slint  preview-backend.slint  selection-backend.slint  strip-backend.slint  transport-backend.slint  window-backend.slint
crates/cutlass-ui/ui/models/: project.slint
crates/cutlass-ui/ui/panels/: index.slint
crates/cutlass-ui/ui/panels/agent/: agent.slint
crates/cutlass-ui/ui/panels/inspector/: crop-inspector.slint  inspector.slint  keyframe-control.slint  text-inspector.slint  transform-inspector.slint
crates/cutlass-ui/ui/panels/preview/: preview.slint
crates/cutlass-ui/ui/panels/timeline/: clip.slint  ruler.slint  state.slint  timeline.slint  toolbar.slint  track-head.slint  track-lane.slint
crates/cutlass-ui/ui/shell/: export-dialog.slint  relink-dialog.slint  title-bar.slint
crates/cutlass-ui/ui/store/: agent-store.slint  app-store.slint  editor-store.slint  index.slint  preview-store.slint  timeline-actions.slint  timeline-store.slint
crates/cutlass-ui/ui/theme/: default.slint  ember.slint  index.slint
crates/cutlass-ui/ui/types/: accent.slint  index.slint  theme.slint
(+99 files in other folders)
