[workspace]
members = [
    "crates/cutlass-app",
    "crates/cutlass-decode",
    "crates/cutlass-compositor",
    "crates/cutlass-engines",
    "crates/cutlass-models",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Mr-Newton/cutlass"

[workspace.dependencies]
ffmpeg-next = "8.1.0"
rustc-hash = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
