[workspace]
members = [
    "crates/cutlass-app",
    "crates/cutlass-cache",
    "crates/cutlass-commands",
    "crates/cutlass-decoder",
    "crates/cutlass-encoder",
    "crates/cutlass-compositor",
    "crates/cutlass-engine",
    "crates/cutlass-models",
    "crates/cutlass-probe",
    "crates/cutlass-ui",
]
default-members = ["crates/cutlass-app"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Mr-Newton/cutlass"

[workspace.dependencies]
ffmpeg-next = "8.1.0"
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
cosmic-text = "0.14"
tiny-skia = "0.11"
