[package]
name = "app"
version.workspace = true
edition.workspace = true
description = "Cutlass app: wires timeline, engine, and renderer"
build = "build.rs"


[dependencies]
decoder = { path = "../decoder" }
engine = { path = "../engine" }
models = { path = "../models" }
renderer = { path = "../renderer" }
timeline = { path = "../timeline" }
rfd = "0.17"
slint = { version = "1.16", features = ["unstable-wgpu-28", "renderer-femtovg-wgpu"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
slint-build = "1.16"

