[package]
name = "cutlass-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass application"

[[bin]]
name = "cutlass-app"
path = "src/main.rs"

[dependencies]
cutlass-compositor = { path = "../cutlass-compositor" }
cutlass-decode = { path = "../cutlass-decode" }
cutlass-engines = { path = "../cutlass-engines" }
cutlass-models = { path = "../cutlass-models" }
png = "0.17"
tracing.workspace = true
tracing-subscriber.workspace = true
