[package]
name = "cutlass-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass end-to-end session CLI (import → save → export)"

[[bin]]
name = "cutlass-app"
path = "src/main.rs"

[dependencies]
cutlass-commands = { path = "../cutlass-commands" }
cutlass-engine = { path = "../cutlass-engine" }
cutlass-models = { path = "../cutlass-models" }
tracing.workspace = true
tracing-subscriber.workspace = true
