[package]
name = "cutlass-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass WGPU frame compositor"

[dependencies]
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true
pollster.workspace = true

[dev-dependencies]
criterion.workspace = true
pollster.workspace = true

[[bench]]
name = "composite"
harness = false
