[package]
name = "cutlass-decode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass video demux + decode (ffmpeg-next)"

[dependencies]
ffmpeg-next.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cold_seek"
harness = false
