[package]
name = "cutlass-decoder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass video demux + decode"

[dependencies]
ffmpeg-next.workspace = true
signalsmith-stretch.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
