[package]
name = "cutlass-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass editing engine"

[dependencies]
cutlass-cache = { path = "../cutlass-cache" }
cutlass-commands = { path = "../cutlass-commands" }
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-models = { path = "../cutlass-models" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
