[package]
name = "cutlass-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass editing engine"

[dependencies]
cutlass-cache = { path = "../cutlass-cache" }
cutlass-commands = { path = "../cutlass-commands" }
cutlass-compositor = { path = "../cutlass-compositor" }
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-encoder = { path = "../cutlass-encoder" }
cutlass-models = { path = "../cutlass-models" }
pollster.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
cutlass-commands = { path = "../cutlass-commands" }
cutlass-decoder = { path = "../cutlass-decoder" }
tempfile = "3"

[[bench]]
name = "preview"
harness = false

[[bench]]
name = "export"
harness = false
