[package]
name = "cutlass-engines"
version.workspace = true
edition.workspace = true
description = "Cutlass editing engines"

[dependencies]
cutlass-decode = { path = "../cutlass-decode" }
cutlass-models = { path = "../cutlass-models" }
rustc-hash.workspace = true
thiserror.workspace = true
tracing.workspace = true
