[package]
name = "cutlass-engines"
version.workspace = true
edition.workspace = true
description = "Cutlass editing engines"

[dependencies]
cutlass-decode = { path = "../cutlass-decode" }
cutlass-models = { path = "../cutlass-models" }
rustc-hash.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "import_seek"
harness = false

[[bench]]
name = "multi_import_seek"
harness = false
