[package]
name = "cutlass-media"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cutlass media probe/decode (ffmpeg-backed)."

[[bin]]
name = "mediactl"
path = "src/bin/mediactl.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ffmpeg-next = "8.1.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
num-rational = "0.4.2"
thiserror = "2.0.18"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
