[package]
name = "cutlass-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass project/timeline data model"

[dependencies]
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
