[package]
name = "cutlass-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass desktop editor UI (Slint)"

[[bin]]
name = "cutlass-ui"
path = "src/main.rs"

[dependencies]
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-engine = { path = "../cutlass-engine" }
cutlass-models = { path = "../cutlass-models" }
cutlass-commands = { path = "../cutlass-commands" }
crossbeam-channel = "0.5.15"
serde = { workspace = true }
slint = { version = "1.16", features = [
    "unstable-winit-030",
    "unstable-wgpu-28",
    "renderer-femtovg-wgpu",
    "serde",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.17.2"

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
slint-build = "1.16"
